--- a/app.json
+++ b/app.json
@@ -30,6 +30,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    
+      "expo": {
+        "experiments": {
+          "tsconfigPaths": true
+        }
+      }
+    
+    
   }
 }
