--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo start:android",
+    "ios": "expo start:ios",
+    "web": "expo start:web"
   },
   "dependencies": {
     "@expo-google-fonts/amatic-sc": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/elements": "^1.3.21",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
