--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "expo-location": "~16.1.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "expo-local-authentication": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
