--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-navigation/elements": "^1.3.21",
     "expo": "~49.0.15",
+    "expo-2d-context": "^0.0.4",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
+    "expo-gesture-handler": "^0.0.0",
+    "expo-gl": "^13.2.0",
     "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-location": "~16.1.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "expo-local-authentication": "~13.4.1"
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
